# transcript-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLOUD_DEPLOYMENT.md  CONFIGURATION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  Dockerfile.prod  Dockerfile.worker  LICENSE  README.md  UV_GUIDE.md  WINDOWS_SETUP.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  quick-start.ps1  quick-start.sh  setup-uv.ps1  setup-windows.ps1
.github/workflows/: build.yml  ci-cd-new.yml  ci-cd.yml
examples/: api_example.py  cli_example.py
k8s/: api.yaml  chromadb.yaml  configmap.yaml  frontend.yaml  ingress.yaml  namespace.yaml  ollama.yaml  redis.yaml  worker.yaml
src/transcript_summarizer/: __init__.py  api.py  cli.py  worker.py
src/transcript_summarizer/config/: logging.py  settings.py
src/transcript_summarizer/core/: __init__.py  summarizer.py
src/transcript_summarizer/frontend/: __init__.py  gradio_ui.py
src/transcript_summarizer/models/: __init__.py  schemas.py
src/transcript_summarizer/storage/: __init__.py  vector_store.py
src/transcript_summarizer/utils/: __init__.py  vtt_parser.py
tests/: conftest.py  test_api.py  test_core.py  test_storage.py
